testdata/baselines/reference/submodule/conformance/destructuringParameterDeclaration3ES6.errors.txt
error TS2318: Cannot find global type 'Array'.
error TS2318: Cannot find global type 'Function'.
error TS2318: Cannot find global type 'IArguments'.
error TS2318: Cannot find global type 'RegExp'.
error TS2318: Cannot find global type 'String'.
error TS2552: Cannot find name 'Boolean'. Did you mean 'boolean'?
error TS2552: Cannot find name 'Number'. Did you mean 'number'?
error TS2552: Cannot find name 'Object'. Did you mean 'object'?
destructuringParameterDeclaration3ES6.ts(7,20): error TS2304: Cannot find name 'Array'.
destructuringParameterDeclaration3ES6.ts(7,26): error TS2304: Cannot find name 'String'.
destructuringParameterDeclaration3ES6.ts(8,18): error TS2304: Cannot find name 'Array'.
destructuringParameterDeclaration3ES6.ts(8,24): error TS2304: Cannot find name 'String'.
destructuringParameterDeclaration3ES6.ts(9,25): error TS2304: Cannot find name 'Array'.
destructuringParameterDeclaration3ES6.ts(9,31): error TS2304: Cannot find name 'String'.
destructuringParameterDeclaration3ES6.ts(9,38): error TS2304: Cannot find name 'Number'.
destructuringParameterDeclaration3ES6.ts(13,19): error TS2304: Cannot find name 'Array'.
destructuringParameterDeclaration3ES6.ts(13,25): error TS2304: Cannot find name 'String'.
destructuringParameterDeclaration3ES6.ts(16,13): error TS2488: Type '[any, any, [[any]]]' must have a '[Symbol.iterator]()' method that returns an iterator.
destructuringParameterDeclaration3ES6.ts(16,20): error TS2488: Type '[[any]]' must have a '[Symbol.iterator]()' method that returns an iterator.
destructuringParameterDeclaration3ES6.ts(16,21): error TS2488: Type '[any]' must have a '[Symbol.iterator]()' method that returns an iterator.
destructuringParameterDeclaration3ES6.ts(17,14): error TS2488: Type '[any, any, [[any]], ...any[]]' must have a '[Symbol.iterator]()' method that returns an iterator.
destructuringParameterDeclaration3ES6.ts(18,14): error TS2488: Type '{}' must have a '[Symbol.iterator]()' method that returns an iterator.
destructuringParameterDeclaration3ES6.ts(18,15): error TS2339: Property '0' does not exist on type '{}'.
destructuringParameterDeclaration3ES6.ts(18,18): error TS2339: Property '1' does not exist on type '{}'.
destructuringParameterDeclaration3ES6.ts(18,21): error TS2339: Property '2' does not exist on type '{}'.
destructuringParameterDeclaration3ES6.ts(26,4): error TS2345: Argument of type '[number, number, [[string]], boolean, boolean]' is not assignable to parameter of type '[any, any, [[any]]]'.
  Source has 5 element(s) but target allows only 3.
destructuringParameterDeclaration3ES6.ts(29,12): error TS2322: Type 'number' is not assignable to type '[[any]]'.
destructuringParameterDeclaration3ES6.ts(30,5): error TS2345: Argument of type '[number, number]' is not assignable to parameter of type '[any, any, [[any]], ...any[]]'.
  Source has 2 element(s) but target requires 3.
destructuringParameterDeclaration3ES6.ts(40,25): error TS2304: Cannot find name 'Number'.


!!! error TS2318: Cannot find global type 'Array'.
!!! error TS2318: Cannot find global type 'Function'.
!!! error TS2318: Cannot find global type 'IArguments'.
!!! error TS2318: Cannot find global type 'RegExp'.
!!! error TS2318: Cannot find global type 'String'.
!!! error TS2552: Cannot find name 'Boolean'. Did you mean 'boolean'?
!!! error TS2552: Cannot find name 'Number'. Did you mean 'number'?
!!! error TS2552: Cannot find name 'Object'. Did you mean 'object'?
==== destructuringParameterDeclaration3ES6.ts (21 errors) ====
    // If the parameter is a rest parameter, the parameter type is any[]
    // A type annotation for a rest parameter must denote an array type.
    
    // RestParameter:
    //     ...   Identifier   TypeAnnotation(opt)
    
    type arrayString = Array<String>
                       ~~~~~
!!! error TS2304: Cannot find name 'Array'.
                             ~~~~~~
!!! error TS2304: Cannot find name 'String'.
    type someArray = Array<String> | number[];
                     ~~~~~
!!! error TS2304: Cannot find name 'Array'.
                           ~~~~~~
!!! error TS2304: Cannot find name 'String'.
    type stringOrNumArray = Array<String|Number>;
                            ~~~~~
!!! error TS2304: Cannot find name 'Array'.
                                  ~~~~~~
!!! error TS2304: Cannot find name 'String'.
                                         ~~~~~~
!!! error TS2304: Cannot find name 'Number'.
    
    function a1(...x: (number|string)[]) { }
    function a2(...a) { }
    function a3(...a: Array<String>) { }
                      ~~~~~
!!! error TS2304: Cannot find name 'Array'.
                            ~~~~~~
!!! error TS2304: Cannot find name 'String'.
    function a4(...a: arrayString) { }
    function a5(...a: stringOrNumArray) { }
    function a9([a, b, [[c]]]) { }
                ~~~~~~~~~~~~~
!!! error TS2488: Type '[any, any, [[any]]]' must have a '[Symbol.iterator]()' method that returns an iterator.
                       ~~~~~
!!! error TS2488: Type '[[any]]' must have a '[Symbol.iterator]()' method that returns an iterator.
                        ~~~
!!! error TS2488: Type '[any]' must have a '[Symbol.iterator]()' method that returns an iterator.
    function a10([a, b, [[c]], ...x]) { }
                 ~~~~~~~~~~~~~~~~~~~
!!! error TS2488: Type '[any, any, [[any]], ...any[]]' must have a '[Symbol.iterator]()' method that returns an iterator.
    function a11([a, b, c, ...x]: number[]) { }
                 ~~~~~~~~~~~~~~~
!!! error TS2488: Type '{}' must have a '[Symbol.iterator]()' method that returns an iterator.
                  ~
!!! error TS2339: Property '0' does not exist on type '{}'.
                     ~
!!! error TS2339: Property '1' does not exist on type '{}'.
                        ~
!!! error TS2339: Property '2' does not exist on type '{}'.
    
    
    var array = [1, 2, 3];
    var array2 = [true, false, "hello"];
    a2([...array]);
    a1(...array);
    
    a9([1, 2, [["string"]], false, true]);   // Parameter type is [any, any, [[any]]]
       ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2345: Argument of type '[number, number, [[string]], boolean, boolean]' is not assignable to parameter of type '[any, any, [[any]]]'.
!!! error TS2345:   Source has 5 element(s) but target allows only 3.
    
    a10([1, 2, [["string"]], false, true]);   // Parameter type is any[]
    a10([1, 2, 3, false, true]);              // Parameter type is any[]
               ~
!!! error TS2322: Type 'number' is not assignable to type '[[any]]'.
    a10([1, 2]);                              // Parameter type is any[]
        ~~~~~~
!!! error TS2345: Argument of type '[number, number]' is not assignable to parameter of type '[any, any, [[any]], ...any[]]'.
!!! error TS2345:   Source has 2 element(s) but target requires 3.
    a11([1, 2]);                              // Parameter type is number[]
    
    // Rest parameter with generic
    function foo<T>(...a: T[]) { }
    foo<number|string>("hello", 1, 2);
    foo("hello", "world");
    
    enum E { a, b }
    const enum E1 { a, b }
    function foo1<T extends Number>(...a: T[]) { }
                            ~~~~~~
!!! error TS2304: Cannot find name 'Number'.
    foo1(1, 2, 3, E.a);
    foo1(1, 2, 3, E1.a, E.b);
    
    
    